--- a/src/Pages/pages.css
+++ b/src/Pages/pages.css
@@ -7,8 +7,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@900&display=swap');
 
-
-
-.console-log-level .console-message-text {
-  color:green;
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
 }
